force-app/main/default/objects/Upload_files_to_GoogleDrive__e/Upload_files_to_GoogleDrive__e.object-meta.xml
<CustomObject>
    <description>This event will contain the details about which files and where these files are to be uploaded in Google Drive.</description>
    <label>Upload Files to GoogleDrive</label>
    <pluralLabel>Upload Files to GoogleDrive</pluralLabel>
</CustomObject>