force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/Folder_name_for_files__c.field-meta.xml
<CustomField>
    <fullName>Folder_name_for_files__c</fullName>
    <label>Folder name for files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>