force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/Google_Drive_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Path__c</fullName>
    <description>For upload via &quot;Files&quot; related list on record page, if &quot;Google Drive Ref&quot; field is empty on the Job/Acc record, this field shall be used to get the Google folder ref.</description>
    <label>Google Drive Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>