force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/GoogleDriveFolderRefForRecord__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderRefForRecord__c</fullName>
    <description>For upload via lightning comp, this will contain the Google Drive Ref of the actual folder where file is to be stored. And for upload via &quot;Files&quot; related list on record page, this will contain the Google Drive Ref for the Job/Account main folder.</description>
    <label>GoogleDriveFolderRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>