force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/Logged_in_user_details__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_user_details__c</fullName>
    <label>Logged in user details</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>