force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/Main_SF_Folder_GoogleDrive_ref__c.field-meta.xml
<CustomField>
    <fullName>Main_SF_Folder_GoogleDrive_ref__c</fullName>
    <description>This will the Google Drive folder ref for the main &quot;Salesforce&quot; folder in google drive.</description>
    <label>Main SF Folder GoogleDrive ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>