force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>MIME_Type__c</fullName>
    <description>This will store the MIME type of the file.</description>
    <label>MIME Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>