force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/SF_DocumentID__c.field-meta.xml
<CustomField>
    <fullName>SF_DocumentID__c</fullName>
    <description>This will contain the ContentDocumentID for the file attached.</description>
    <label>SF DocumentID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>