force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/SF_record_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_record_URL__c</fullName>
    <description>This will store the link to the SF record(Acc/Job) from where the platform event was created.</description>
    <label>SF record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>