force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/ToBeDeletedFromSF__c.field-meta.xml
<CustomField>
    <fullName>ToBeDeletedFromSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToBeDeletedFromSF</label>
    <type>Checkbox</type>
</CustomField>