force-app/main/default/objects/Upload_files_to_GoogleDrive__e/fields/UploadToGoogleDocsNotesAndAttachments__c.field-meta.xml
<CustomField>
    <fullName>UploadToGoogleDocsNotesAndAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UploadToGoogleDocsNotesAndAttachments</label>
    <type>Checkbox</type>
</CustomField>